Revert "fix icon align."
This reverts commit a90548743d30b147d5177c37e847c5aeaa8b625b.

--- a/docs/_static/css/extra.css
+++ b/docs/_static/css/extra.css
@@ -45,6 +45,3 @@ span.mjpage__block > svg {
   font-style: normal !important; /* over ride is needed*/
   font-variant: nomal !important; /* over ride is needed*/
 }
-#icon {
-  text-align: unset !important;
-}
